Development Portal (2017-09-01 shi)
==============================
Updated footer with D-Portal-Logs link
Added https info and link to Generator page
Updated translations for new footer link
Fix settings link
Updated search_view_text in translations
Added 'press enter' search input box when typing
Remove auto-suggestion in search input box


Development Portal (2017-08-31 shi)
==============================
Updated search2 intro and information text
Added FAQ link to landing page
Removed freetext search link


Development Portal (2017-08-30 shi)
==============================
Fix search2 multiple choice stylings
Update abc toggle
Update overall search2 layout
Update Print-friendly css
Added pubpost/prelink to savi.js for publisher ref links
Moved url in footer of general.html to #footer6 including translations


Development Portal (2017-08-18 shi)
==============================
Fix search2 dropdown margin


Development Portal (2017-08-16 shi)
==============================
Updated locations element in SAVi


Development Portal (2017-08-03 shi)
==============================
Updated 'Inspire' template
Updated 'Mustard' template
Updated 'Grey' template
Fixed text in footer including translations
Fixed missing hover text in countries view
Moved activity id result button above search box


Development Portal (2017-08-01 shi)
==============================
Renamed 'Status' to 'Activity Status'
Updated art/ to ctrack/art/ in Generator to fix image paths


Development Portal (2017-07-31 shi)
==============================
Added back country and publisher list to Explore page
Added translations for Status dropdown
Added original and high icons for Status


Development Portal (2017-07-28 shi)
==============================
Added font css for Google translate in SAVi
Updated SAVi participating-org layout for version 2.02++ only
Updated Print-friendly css
Added support for location display in SAVi (ver. 2.02++)
Added IATI Identifier search