@@ -517,7 +517,7 @@ Generator - 小工具为您的网站
 #footer19_text
 Github的反馈论坛
 
-#^footer20_text
+#footer20_text
 数据库日志
 
 #read_more_text
