@@ -517,7 +517,7 @@ Attribution &amp; Sources
 #footer19_text
 Github Feedback Forum
 
-#^footer20_text
+#footer20_text
 Database Logs
 
 #read_more_text
