@@ -517,7 +517,7 @@ Attribution et Sources
 #footer19_text
 Feedback Forum Github
 
-#^footer20_text
+#footer20_text
 Journal des données
 
 #read_more_text
