@@ -514,7 +514,7 @@ Generator - अपनी वेबसाइट के लिए विजेट
 #footer19_text
 Github प्रतिक्रिया फोरम
 
-#^footer20_text
+#footer20_text
 डाटाबेस लॉग्स
 
 #read_more_text
