@@ -517,7 +517,7 @@ Generator - あなたのウェブサイトのためのウィジェット
 #footer19_text
 Githubのフィードバックフォーラム
 
-#^footer20_text
+#footer20_text
 データベースログ
 
 #read_more_text
