@@ -514,7 +514,7 @@ Atribución y Fuentes
 #footer19_text
 Foro de sugerencias Github
 
-#^footer20_text
+#footer20_text
 Registros de la base de datos
 
 #read_more_text
