@@ -7,6 +7,7 @@ Fix settings link
 Updated search_view_text in translations
 Added 'press enter' search input box when typing
 Remove auto-suggestion in search input box
+Added text to replace "..." in search
 
 
 Development Portal (2017-08-31 shi)
